[tool.poetry]
name = "nearest-cars"
version = "0.1.0"
description = ""
authors = ["user <bav-574@mail.ru>"]
readme = "README.md"
packages = [{include = "nearest_cars"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
alembic = "^1.11.1"
uvicorn = "^0.22.0"
asyncpg = "^0.27.0"
pandas = "^2.0.1"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
